change the live test